[package]
name = "AliVxlanForwarder"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI 参数解析
clap = { version = "4.5", features = ["derive"] }

# 抓包和协议解析
pnet = "0.34.0"

# 低层系统调用支持（TAP 接口）
libc = "0.2"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# Web 接口展示状态
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }

# 用于共享状态（如 Arc<Stats>）
once_cell = "1.19"
async-trait = "0.1"

